drop the display of linenumber

--- a/_includes/themes/clear/default.html
+++ b/_includes/themes/clear/default.html
@@ -79,7 +79,7 @@
         $(this).attr('target', '_blank');
       });
 
-      $('pre').addClass('prettyprint linenums').attr('style', 'overflow:auto');
+      $('pre').addClass('prettyprint').attr('style', 'overflow:auto');
       window.prettyPrint && prettyPrint();
 
       function traverse($node, len, maxCount) {
